--- a/i18n/ru_RU/LC_MESSAGES/pbdirectory.po
+++ b/i18n/ru_RU/LC_MESSAGES/pbdirectory.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-09-25 15:07+0100\n"
+"POT-Creation-Date: 2011-09-23 09:52+0000\n"
 "PO-Revision-Date: 2008-10-19 20:27+0100\n"
 "Last-Translator: Alexander Kozyrev\n"
 "Language-Team: Russian\n"
@@ -16,10 +16,14 @@ msgstr ""
 "Content-Type: text/plain; charset=ISO-8859-5\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: install.php:4
+msgid "Phonebook Directory"
+msgstr "Телефонная книга"
+
 msgid "Phonebook dial-by-name directory"
 msgstr "Телефонная книга по имени"
 
-#: module.xml
-msgid "Phonebook Directory"
-msgstr "Телефонная книга"
+msgid "Admin"
+msgstr ""
+
+msgid "Provides a dial-by-name directory for phonebook entries"
+msgstr ""
