--- a/i18n/ja_JP/LC_MESSAGES/pbdirectory.po
+++ b/i18n/ja_JP/LC_MESSAGES/pbdirectory.po
@@ -37,7 +37,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreePBX 2.10.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-14 15:05-0700\n"
+"POT-Creation-Date: 2015-12-10 16:38-0800\n"
 "PO-Revision-Date: 2013-11-07 13:17+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -47,7 +47,11 @@ msgstr ""
 "Language: Japanese\n"
 "X-Generator: Poedit 1.5.7\n"
 
-#: functions.inc.php:19
+#: pbdirectory.i18n.php:6
+msgid "Admin"
+msgstr "アドミン"
+
+#: functions.inc.php:19 pbdirectory.i18n.php:4
 msgid "Phonebook Directory"
 msgstr "電話帳ディレクトリ"
 
@@ -55,9 +59,6 @@ msgstr "電話帳ディレクトリ"
 msgid "Phonebook dial-by-name directory"
 msgstr "名前からダイヤル　電話帳ディレクトリ"
 
-#~ msgid "Admin"
-#~ msgstr "アドミン"
-
-#~ msgid "Provides a dial-by-name directory for phonebook entries"
-#~ msgstr ""
-#~ "電話帳エントリに対して名前からダイヤルするディレクトリを提供します。"
+#: pbdirectory.i18n.php:8
+msgid "Provides a dial-by-name directory for phonebook entries"
+msgstr "電話帳エントリに対して名前からダイヤルするディレクトリを提供します。"
