--- a/i18n/pt_BR/LC_MESSAGES/pbdirectory.po
+++ b/i18n/pt_BR/LC_MESSAGES/pbdirectory.po
@@ -9,15 +9,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-07-13 19:55-0700\n"
+"POT-Creation-Date: 2017-08-22 19:08-0400\n"
 "PO-Revision-Date: 2016-12-13 02:27+0200\n"
 "Last-Translator: Alexander <alexander.schley@paranagua.pr.gov.br>\n"
-"Language-Team: Portuguese (Brazil) "
-"<http://weblate.freepbx.org/projects/freepbx/pbdirectory/pt_BR/>\n"
-"Language: pt_BR\n"
+"Language-Team: Portuguese (Brazil) <http://weblate.freepbx.org/projects/"
+"freepbx/pbdirectory/pt_BR/>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: pt_BR\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 2.4\n"
 
@@ -29,7 +29,7 @@ msgstr "Administrador"
 msgid "Phonebook Directory"
 msgstr "Diretório de Agenda Telefônica"
 
-#: install.php:5
+#: install.php:5 pbdirectory.i18n.php:10
 msgid "Phonebook dial-by-name directory"
 msgstr "Diretório de Agenda Telefônica discado-por-nome"
 
