--- a/i18n/vi/LC_MESSAGES/pbdirectory.po
+++ b/i18n/vi/LC_MESSAGES/pbdirectory.po
@@ -9,15 +9,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-07-13 19:55-0700\n"
+"POT-Creation-Date: 2017-08-22 19:08-0400\n"
 "PO-Revision-Date: 2017-07-11 13:10+0200\n"
 "Last-Translator: PETER <ftek@ymail.com>\n"
-"Language-Team: Vietnamese "
-"<http://weblate.freepbx.org/projects/freepbx/pbdirectory/vi/>\n"
-"Language: vi\n"
+"Language-Team: Vietnamese <http://weblate.freepbx.org/projects/freepbx/"
+"pbdirectory/vi/>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: vi\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Weblate 2.4\n"
 
@@ -29,7 +29,7 @@ msgstr "Quản trị viên"
 msgid "Phonebook Directory"
 msgstr "Thư mục danh bạ điện thoại"
 
-#: install.php:5
+#: install.php:5 pbdirectory.i18n.php:10
 msgid "Phonebook dial-by-name directory"
 msgstr "Danh mục quay số theo tên cả danh bạ điện thoại"
 
